--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,6 @@ Flask
 numpy
 Pillow
 werkzeug
-# On Windows and many PaaS prefer the CPU package unless you need GPU support
+APScheduler==3.10.1
 tensorflow
 gunicorn
